--- a/style.css
+++ b/style.css
@@ -16,7 +16,6 @@ body {
     url(/images/bg-pattern-bottom.svg);
   background-position: right 50vw bottom 50vh, left 50vw top 50vh;
   background-repeat: no-repeat;
-  
 }
 
 .container {
@@ -51,24 +50,20 @@ body {
   position: relative;
 }
 
-.user-image img{
-    position: absolute;
-    top: -60px;
-    border: 5px solid white;
-    border-radius: 50%;
-    width: 30%;
+.user-image img {
+  position: absolute;
+  top: -60px;
+  border: 5px solid white;
+  border-radius: 50%;
+  width: 30%;
 }
 
 .name-div {
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    
-   
-   
-    
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
 .content {
   width: 100%;
@@ -78,79 +73,83 @@ body {
   align-items: center;
   border-top: 1px solid hsl(0, 4%, 90%);
   padding: 5px;
-  
-
 }
 
-.followers, .likes, .photos {
-    display: flex;
-    flex-direction: column;
-    /* justify-content: center; */
-    align-items: center;
+.followers,
+.likes,
+.photos {
+  display: flex;
+  flex-direction: column;
+  /* justify-content: center; */
+  align-items: center;
 }
 
-.name, .stats {
-    font-size: 18px;
-    font-weight: 700;
-    
+.name,
+.stats {
+  font-size: 18px;
+  font-weight: 700;
 }
 
-
-.description{
-    font-size: 12px;
+.description {
+  font-size: 12px;
 }
 
-.name{
-    padding-top: 84px;
+.name {
+  padding-top: 84px;
 }
 
-.city{
-    font-size: 14px;
+.city {
+  font-size: 14px;
 }
 
-.description, .name-div span, .city {
-    padding: 5px;
-    font-weight: 400;
+.description,
+.name-div span,
+.city {
+  padding: 5px;
+  font-weight: 400;
 }
 
 @media only screen and (max-width: 1000px) {
-    .user-image img{
-        top: -55px;
-        width: 40%;
-    }
-
-    
+  .user-image img {
+    top: -55px;
+    width: 40%;
+  }
 }
 
 @media only screen and (max-width: 800px) {
-    .container{
-        width: 60%;
-        height: 80%;
-    }
+  .container {
+    width: 60%;
+    height: 80%;
+  }
 
-    .user-image img{
-        top: -76px;
-        width: 35%;
-       
-    }
-    .name, .stats {
-        font-size: 25px;
-        
-        
-    }
-    .city{
-        font-size: 17px;
-    }
+  .user-image img {
+    top: -76px;
+    width: 35%;
+  }
+  .name,
+  .stats {
+    font-size: 25px;
+  }
+  .city {
+    font-size: 17px;
+  }
 
-    .description{
-        font-size: 12px;
-    }
-
-
-
-
-
-
+  .description {
+    font-size: 12px;
+  }
 }
 
+@media only screen and (max-width: 375px) {
+  .city {
+    font-size: 14px;
+  }
+  .user-image img {
+    top: -46px;
+    width: 30%;
+  }
 
+  .name,
+  .stats {
+    font-size: 18px;
+  }
+}
