--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -65,6 +65,7 @@ body {
 	align-items: center;
 	justify-content: center;
 }
+
 .content {
 	width: 100%;
 	flex-basis: 20%;
@@ -81,7 +82,7 @@ body {
 	display: flex;
 	flex-direction: column;
 	align-items: center;
-  letter-spacing: 1px;
+	letter-spacing: 1px;
 }
 
 .name,
@@ -111,7 +112,27 @@ body {
 	color: hsl(227, 10%, 46%);
 }
 
-@media only screen and (min-width: 375px) {
+@media only screen and (max-width: 1000px) {
+	.container {
+		width: 40%;
+		height: 55%;
+	}
+}
+
+@media only screen and (max-width: 700px) {
+	.container {
+		width: 57%;
+	}
+}
+
+@media only screen and (max-width: 500px) {
+	.container {
+		width: 81%;
+		height: 50%;
+	}
+}
+
+@media only screen and (max-width: 375px) {
 	body {
 		background-position: right 33vw bottom 50vh, left 40vw top 42vh;
 	}
