--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,171 +1,272 @@
 * {
-	margin: 0;
-	padding: 0;
-	box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
 }
 
 body {
-	height: 100vh;
-	width: 100vw;
-	display: flex;
-	justify-content: center;
-	background-color: hsl(185, 75%, 39%);
-	align-items: center;
-	font-family: "Kumbh Sans", sans-serif;
-	background-image: url(/assets/images/bg-pattern-top.svg),
-		url(/assets/images/bg-pattern-bottom.svg);
-	background-position: right 50vw bottom 50vh, left 50vw top 50vh;
-	background-repeat: no-repeat;
-}
-
-.container {
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	flex-direction: column;
-	background-color: white;
-	width: 30%;
-	height: 60%;
-	border-radius: 1em;
-	overflow: hidden;
-}
-
-.pattern {
-	width: 100%;
-	height: 30%;
-	flex-basis: 40%;
-}
-
-.pattern img {
-	width: 100%;
-	height: 100%;
-}
-
-.user-image {
-	flex-basis: 40%;
-	display: flex;
-	flex-direction: column;
-	align-items: center;
-	width: 100%;
-	position: relative;
-}
-
-.user-image img {
-	position: absolute;
-	top: -60px;
-	border: 5px solid white;
-	border-radius: 50%;
-	width: 30%;
-}
-
-.name-div {
-	width: 100%;
-	display: flex;
-	flex-direction: column;
-	align-items: center;
-	justify-content: center;
-}
-
-.content {
-	width: 100%;
-	flex-basis: 20%;
-	display: flex;
-	justify-content: space-around;
-	align-items: center;
-	border-top: 1px solid hsl(0, 8%, 93%);
-	padding: 5px;
-}
-
-.followers,
-.likes,
-.photos {
-	display: flex;
-	flex-direction: column;
-	align-items: center;
-	letter-spacing: 1px;
-}
-
-.name,
-.stats {
-	font-size: 18px;
-	font-weight: 700;
-	color: hsl(229, 23%, 23%);
-}
-
-.description {
-	font-size: 12px;
-}
-
-.name {
-	padding-top: 84px;
-}
-
-.city {
-	font-size: 14px;
-}
-
-.description,
-.name-div span,
-.city {
-	padding: 5px;
-	font-weight: 400;
-	color: hsl(227, 10%, 46%);
-}
-
-@media only screen and (max-width: 1000px) {
-	.container {
-		width: 40%;
-		height: 55%;
-	}
-}
-
-@media only screen and (max-width: 700px) {
-	.container {
-		width: 57%;
-	}
-}
-
-@media only screen and (max-width: 500px) {
-	.container {
-		width: 81%;
-		height: 50%;
-	}
+  height: 100vh;
+  width: 100vw;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  background-color: #19a2ae;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  font-family: "Kumbh Sans", sans-serif;
+  background-image: url(../images/bg-pattern-top.svg), url(../images/bg-pattern-bottom.svg);
+  background-position: right 50vw bottom 50vh, left 50vw top 50vh;
+  background-repeat: no-repeat;
 }
 
 @media only screen and (max-width: 375px) {
-	body {
-		background-position: right 33vw bottom 50vh, left 40vw top 42vh;
-	}
-
-	.container {
-		width: 87%;
-		height: 46%;
-	}
-
-	.pattern {
-		flex-basis: 38%;
-	}
-
-	.user-image img {
-		top: -54px;
-		width: 33%;
-	}
-
-	.content {
-		flex-basis: 24%;
-	}
-
-	.name {
-		padding-top: 75px;
-	}
-
-	.city {
-		padding-top: 8px;
-	}
-
-	.description {
-		font-size: 10px;
-		letter-spacing: 2px;
-		margin-top: 1px;
-	}
+  body {
+    background-position: right 33vw bottom 50vh, left 40vw top 42vh;
+  }
 }
+
+body .container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  background-color: white;
+  width: 30%;
+  height: 60%;
+  border-radius: 1em;
+  overflow: hidden;
+}
+
+@media only screen and (max-width: 1000px) {
+  body .container {
+    width: 40%;
+    height: 55%;
+  }
+}
+
+@media only screen and (max-width: 700px) {
+  body .container {
+    width: 57%;
+  }
+}
+
+@media only screen and (max-width: 500px) {
+  body .container {
+    width: 81%;
+    height: 50%;
+  }
+}
+
+@media only screen and (min-device-width: 375px) and (max-device-width: 812px) and (-webkit-min-device-pixel-ratio: 3) {
+  body .container {
+    width: 42%;
+    height: 88%;
+  }
+}
+
+@media only screen and (max-width: 375px) {
+  body .container {
+    width: 87%;
+    height: 46%;
+  }
+}
+
+body .container .pattern {
+  width: 100%;
+  height: 30%;
+  -ms-flex-preferred-size: 40%;
+      flex-basis: 40%;
+}
+
+@media only screen and (max-width: 375px) {
+  body .container .pattern {
+    -ms-flex-preferred-size: 38%;
+        flex-basis: 38%;
+  }
+}
+
+body .container .pattern img {
+  width: 100%;
+  height: 100%;
+}
+
+body .container .user-image {
+  -ms-flex-preferred-size: 40%;
+      flex-basis: 40%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  width: 100%;
+  position: relative;
+}
+
+body .container .user-image img {
+  position: absolute;
+  top: -60px;
+  border: 5px solid white;
+  border-radius: 50%;
+  width: 30%;
+}
+
+@media only screen and (min-device-width: 375px) and (max-device-width: 812px) and (-webkit-min-device-pixel-ratio: 3) {
+  body .container .user-image img {
+    top: -52px;
+  }
+}
+
+@media only screen and (max-width: 375px) {
+  body .container .user-image img {
+    top: -54px;
+    width: 33%;
+  }
+}
+
+body .container .user-image .name-div {
+  width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+body .container .user-image .name-div .name {
+  font-size: 18px;
+  font-weight: 700;
+  color: #2d3248;
+  padding-top: 84px;
+}
+
+@media only screen and (min-device-width: 375px) and (max-device-width: 812px) and (-webkit-min-device-pixel-ratio: 3) {
+  body .container .user-image .name-div .name {
+    padding-top: 60px;
+  }
+}
+
+@media only screen and (max-width: 375px) {
+  body .container .user-image .name-div .name {
+    padding-top: 75px;
+  }
+}
+
+body .container .user-image .name-div .city {
+  font-size: 14px;
+  padding: 5px;
+  font-weight: 400;
+  color: #6a6f81;
+}
+
+@media only screen and (max-width: 375px) {
+  body .container .user-image .name-div .city {
+    padding-top: 8px;
+  }
+}
+
+body .container .user-image .name-div span {
+  padding: 5px;
+  font-weight: 400;
+  color: #6a6f81;
+}
+
+body .container .content {
+  width: 100%;
+  -ms-flex-preferred-size: 20%;
+      flex-basis: 20%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  border-top: 1px solid #efecec;
+  padding: 5px;
+}
+
+@media only screen and (min-device-width: 375px) and (max-device-width: 812px) and (-webkit-min-device-pixel-ratio: 3) {
+  body .container .content {
+    padding: 15px;
+  }
+}
+
+@media only screen and (max-width: 375px) {
+  body .container .content {
+    -ms-flex-preferred-size: 24%;
+        flex-basis: 24%;
+    padding: 20px;
+  }
+}
+
+body .container .content .followers,
+body .container .content .likes,
+body .container .content .photos {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  letter-spacing: 1px;
+}
+
+body .container .content .followers .stats,
+body .container .content .likes .stats,
+body .container .content .photos .stats {
+  font-size: 18px;
+  font-weight: 700;
+  color: #2d3248;
+}
+
+body .container .content .followers .description,
+body .container .content .likes .description,
+body .container .content .photos .description {
+  font-size: 12px;
+  padding: 5px;
+  font-weight: 400;
+  color: #6a6f81;
+}
+
+@media only screen and (max-width: 375px) {
+  body .container .content .followers .description,
+  body .container .content .likes .description,
+  body .container .content .photos .description {
+    font-size: 10px;
+    letter-spacing: 1.5px;
+    margin-top: -2px;
+  }
+}
+/*# sourceMappingURL=style.css.map */
