--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,32 +5,24 @@
           box-sizing: border-box;
 }
 
-body {
+* body {
   height: 100vh;
   width: 100vw;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  display: -ms-grid;
+  display: grid;
+  place-items: center;
   background-color: #19a2ae;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
   font-family: "Kumbh Sans", sans-serif;
   background-image: url(../images/bg-pattern-top.svg), url(../images/bg-pattern-bottom.svg);
-  background-position: right 50vw bottom 50vh, left 50vw top 50vh;
+  background-position: right 51vw bottom 56vh, left 47vw top 54vh;
   background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-size: cover;
 }
 
-@media only screen and (max-width: 375px) {
-  body {
-    background-position: right 33vw bottom 50vh, left 40vw top 42vh;
-  }
-}
-
-body .container {
+* body .container {
+  -webkit-box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
+          box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -45,67 +37,31 @@ body .container {
       -ms-flex-direction: column;
           flex-direction: column;
   background-color: white;
-  width: 30%;
-  height: 60%;
+  width: 100%;
+  max-width: 343px;
+  margin: 0.24px;
+  height: 100%;
+  max-height: 374px;
   border-radius: 1em;
   overflow: hidden;
-  /*design 375x667*/
+  text-align: center;
 }
 
-@media only screen and (max-width: 1000px) {
-  body .container {
-    width: 40%;
-    height: 55%;
-  }
-}
-
-@media only screen and (max-width: 700px) {
-  body .container {
-    width: 57%;
-  }
-}
-
-@media only screen and (max-width: 500px) {
-  body .container {
-    width: 81%;
-    height: 50%;
-  }
-}
-
-@media only screen and (min-device-width: 375px) and (max-device-width: 812px) and (-webkit-min-device-pixel-ratio: 3) {
-  body .container {
-    width: 42%;
-    height: 88%;
-  }
-}
-
-@media only screen and (max-width: 375px) {
-  body .container {
-    width: 87%;
-    height: 56%;
-  }
-}
-
-body .container .pattern {
+* body .container .pattern {
   width: 100%;
-  height: 30%;
+  height: 25%;
   -ms-flex-preferred-size: 40%;
       flex-basis: 40%;
 }
 
-@media only screen and (max-width: 375px) {
-  body .container .pattern {
-    -ms-flex-preferred-size: 38%;
-        flex-basis: 38%;
-  }
-}
-
-body .container .pattern img {
+* body .container .pattern img {
   width: 100%;
   height: 100%;
 }
 
-body .container .user-image {
+* body .container .user-image {
+  -webkit-box-shadow: 0px -1px 1px 0px rgba(50, 50, 50, 0.2);
+          box-shadow: 0px -1px 1px 0px rgba(50, 50, 50, 0.2);
   -ms-flex-preferred-size: 40%;
       flex-basis: 40%;
   display: -webkit-box;
@@ -122,83 +78,46 @@ body .container .user-image {
   position: relative;
 }
 
-body .container .user-image img {
+* body .container .user-image img {
+  -webkit-box-shadow: 0px -1px 1px 0px rgba(50, 50, 50, 0.3);
+          box-shadow: 0px -1px 1px 0px rgba(50, 50, 50, 0.3);
+  display: block;
   position: absolute;
-  top: -60px;
+  top: -52px;
   border: 5px solid white;
   border-radius: 50%;
-  width: 30%;
-}
-
-@media only screen and (min-device-width: 375px) and (max-device-width: 812px) and (-webkit-min-device-pixel-ratio: 3) {
-  body .container .user-image img {
-    top: -52px;
-  }
-}
-
-@media only screen and (max-width: 375px) {
-  body .container .user-image img {
-    top: -54px;
-    width: 33%;
-  }
-}
-
-body .container .user-image .name-div {
   width: 100%;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  max-width: 104px;
+  height: 100%;
+  max-height: 104px;
 }
 
-body .container .user-image .name-div .name {
+* body .container .user-image .name-div {
+  justify-self: flex-end;
+  text-align: center;
+  margin-top: 60px;
+}
+
+* body .container .user-image .name-div .name {
   font-size: 18px;
   font-weight: 700;
   color: #2d3248;
-  padding-top: 84px;
+  padding: 0.5rem;
 }
 
-@media only screen and (min-device-width: 375px) and (max-device-width: 812px) and (-webkit-min-device-pixel-ratio: 3) {
-  body .container .user-image .name-div .name {
-    padding-top: 60px;
-  }
-}
-
-@media only screen and (max-width: 375px) {
-  body .container .user-image .name-div .name {
-    padding-top: 75px;
-  }
-}
-
-body .container .user-image .name-div .city {
+* body .container .user-image .name-div .city {
   font-size: 14px;
+  font-weight: 400;
+  color: #6a6f81;
+}
+
+* body .container .user-image .name-div span {
   padding: 5px;
   font-weight: 400;
   color: #6a6f81;
 }
 
-@media only screen and (max-width: 375px) {
-  body .container .user-image .name-div .city {
-    padding-top: 8px;
-  }
-}
-
-body .container .user-image .name-div span {
-  padding: 5px;
-  font-weight: 400;
-  color: #6a6f81;
-}
-
-body .container .content {
+* body .container .content {
   width: 100%;
   -ms-flex-preferred-size: 20%;
       flex-basis: 20%;
@@ -211,26 +130,12 @@ body .container .content {
       -ms-flex-align: center;
           align-items: center;
   border-top: 1px solid #efecec;
-  padding: 5px;
+  padding: 21px;
 }
 
-@media only screen and (min-device-width: 375px) and (max-device-width: 812px) and (-webkit-min-device-pixel-ratio: 3) {
-  body .container .content {
-    padding: 15px;
-  }
-}
-
-@media only screen and (max-width: 375px) {
-  body .container .content {
-    -ms-flex-preferred-size: 24%;
-        flex-basis: 24%;
-    padding: 20px;
-  }
-}
-
-body .container .content .followers,
-body .container .content .likes,
-body .container .content .photos {
+* body .container .content .followers,
+* body .container .content .likes,
+* body .container .content .photos {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -244,30 +149,28 @@ body .container .content .photos {
   letter-spacing: 1px;
 }
 
-body .container .content .followers .stats,
-body .container .content .likes .stats,
-body .container .content .photos .stats {
+* body .container .content .followers .stats,
+* body .container .content .likes .stats,
+* body .container .content .photos .stats {
   font-size: 18px;
   font-weight: 700;
   color: #2d3248;
+  letter-spacing: 0.2px;
 }
 
-body .container .content .followers .description,
-body .container .content .likes .description,
-body .container .content .photos .description {
-  font-size: 12px;
+* body .container .content .followers .description,
+* body .container .content .likes .description,
+* body .container .content .photos .description {
+  font-size: 10px;
   padding: 5px;
   font-weight: 400;
   color: #6a6f81;
+  letter-spacing: 1.5px;
 }
 
-@media only screen and (max-width: 375px) {
-  body .container .content .followers .description,
-  body .container .content .likes .description,
-  body .container .content .photos .description {
-    font-size: 10px;
-    letter-spacing: 1.5px;
-    margin-top: -2px;
+@media only screen and (min-width: 1400px) {
+  * body {
+    background-position: right 49vw bottom 22vh, left 40vw top 42vh;
   }
 }
 /*# sourceMappingURL=style.css.map */
